--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -153,14 +153,14 @@
     <ClCompile Include="Engine\Features\Physics\Components\ColliderComponent.cpp" />
     <ClCompile Include="Engine\Features\Physics\Systems\CollisionSystem.cpp" />
     <ClCompile Include="Engine\Features\Rendering\RenderPipeline\EditorGridRenderSystem.cpp" />
-    <ClCompile Include="Engine\Mono\Helpers\SyMonoHashHelper.cpp" />
-    <ClCompile Include="Engine\Mono\Helpers\SyMonoHashHelper.h" />
+    <ClCompile Include="Engine\Mono\Ecs\SyMonoEcsSyncMesh.cpp" />
+    <ClCompile Include="Engine\Mono\Ecs\SyMonoEcsSyncTransform.cpp" />
     <ClCompile Include="Engine\Mono\SyMono.cpp" />
-    <ClCompile Include="Engine\Mono\SyMonoProxyDatas.h" />
+    <ClCompile Include="Engine\Mono\Ecs\SyMonoProxyDatas.h" />
     <ClCompile Include="Engine\Mono\Objects\SyMonoGame.cpp" />
-    <ClCompile Include="Engine\Mono\SyMonoObj.cpp" />
+    <ClCompile Include="Engine\Mono\Api\SyMonoObj.cpp" />
     <ClCompile Include="Engine\Mono\SyMonoRuntime.cpp" />
-    <ClCompile Include="Engine\Mono\SyMonoStr.cpp" />
+    <ClCompile Include="Engine\Mono\Api\SyMonoStr.cpp" />
     <ClCompile Include="Engine\Scene\CameraHelper.cpp" />
     <ClCompile Include="Engine\Scene\GameObjectHelper.cpp" />
     <ClCompile Include="Engine\Serialization\SerializableOuters.h" />
@@ -649,7 +649,7 @@
     <ClCompile Include="Engine\Core\ECS\SystemsGroup.cpp" />
     <ClCompile Include="Engine\Features\Rendering\HUD\HudConsoleSystem.cpp" />
     <ClCompile Include="Engine\Features\ErrorLogging\Systems\ErrorLoggingSystem.cpp" />
-    <ClCompile Include="Engine\Mono\Systems\MonoSyncGeSystem.cpp" />
+    <ClCompile Include="Engine\Mono\Systems\MonoGameLoopSystem.cpp" />
     <ClCompile Include="Engine\Mono\Objects\SyMonoLogger.cpp" />
     <ClCompile Include="Engine\Mono\Objects\SyMonoEcs.cpp" />
     <ClCompile Include="Engine\Mono\Objects\SyMonoGameConfig.cpp" />
@@ -660,6 +660,13 @@
     <ClCompile Include="Engine\Features\Rendering\RenderPipeline\ParticleRenderSystem.cpp" />
     <ClCompile Include="Engine\Mono\Systems\MonoSyncEgSystem.cpp" />
     <ClCompile Include="Engine\Mono\Systems\MonoHotReloadSystem.cpp" />
+    <ClCompile Include="Engine\Mono\Ecs\SyMonoEcsSyncSceneObject.cpp" />
+    <ClCompile Include="Engine\Mono\Ecs\SyMonoEcsSyncCollider.cpp" />
+    <ClCompile Include="Engine\Mono\Ecs\SyMonoEcsSyncLight.cpp" />
+    <ClCompile Include="Engine\Mono\Ecs\SyMonoEcsSyncParticles.cpp" />
+    <ClCompile Include="Engine\Mono\Ecs\SyMonoEcsSyncRigid.cpp" />
+    <ClCompile Include="Engine\Mono\Ecs\SyMonoEcsSyncSkybox.cpp" />
+    <ClCompile Include="Engine\Mono\Ecs\SyMonoEcsSyncSound.cpp" />
     <ClCompile Include="vendor\Delegates.cpp" />
     <ClCompile Include="vendor\ImGuizmo\GraphEditor.cpp" />
     <ClCompile Include="vendor\ImGuizmo\ImCurveEdit.cpp" />
@@ -686,7 +693,11 @@
     <ClInclude Include="Engine\Components\SkyboxResource.h" />
     <ClInclude Include="Engine\Features\Physics\Components\ColliderComponent.h" />
     <ClInclude Include="Engine\Core\ResourcePath.h" />
-    <ClInclude Include="Engine\Mono\SyMonoStr.h" />
+    <ClInclude Include="Engine\Mono\Ecs\ISyMonoEcsSync.h" />
+    <ClInclude Include="Engine\Mono\Ecs\SyMonoEcsSyncBase.h" />
+    <ClInclude Include="Engine\Mono\Ecs\SyMonoEcsSyncMesh.h" />
+    <ClInclude Include="Engine\Mono\Ecs\SyMonoEcsSyncTransform.h" />
+    <ClInclude Include="Engine\Mono\Api\SyMonoStr.h" />
     <ClInclude Include="Engine\Events\SyHotReloadEvent.h" />
     <ClInclude Include="Engine\Events\SyImageBasedLightingUpdateEvent.h" />
     <ClInclude Include="Engine\Features\Physics\Events\SyOnCreateColliderEvent.h" />
@@ -698,11 +709,10 @@
     <ClInclude Include="Engine\Features\Rendering\RenderPipeline\EditorGridRenderSystem.h" />
     <ClInclude Include="Engine\Components\Material.h" />
     <ClInclude Include="Engine\Components\Model.h" />
-    <ClInclude Include="Engine\Mono\Objects\ISyMonoEcsCallbacks.h" />
     <ClInclude Include="Engine\Mono\SyMono.h" />
     <ClInclude Include="Engine\Mono\Objects\SyMonoGame.h" />
-    <ClInclude Include="Engine\Mono\SyMonoMethod.h" />
-    <ClInclude Include="Engine\Mono\SyMonoObj.h" />
+    <ClInclude Include="Engine\Mono\Api\SyMonoMethod.h" />
+    <ClInclude Include="Engine\Mono\Api\SyMonoObj.h" />
     <ClInclude Include="Engine\Mono\SyMonoRuntime.h" />
     <ClInclude Include="Engine\Scene\CameraHelper.h" />
     <ClInclude Include="Engine\Components\SkyboxComponent.h" />
@@ -793,7 +803,7 @@
     <ClInclude Include="Engine\Core\ECS\SystemsGroup.h" />
     <ClInclude Include="Engine\Features\Rendering\HUD\HudConsoleSystem.h" />
     <ClInclude Include="Engine\Features\ErrorLogging\Systems\ErrorLoggingSystem.h" />
-    <ClInclude Include="Engine\Mono\Systems\MonoSyncGeSystem.h" />
+    <ClInclude Include="Engine\Mono\Systems\MonoGameLoopSystem.h" />
     <ClInclude Include="Engine\Mono\Objects\SyMonoLogger.h" />
     <ClInclude Include="Engine\Mono\Objects\SyMonoEcs.h" />
     <ClInclude Include="Engine\Mono\Objects\SyMonoGameConfig.h" />
@@ -803,6 +813,13 @@
     <ClInclude Include="Engine\Features\Rendering\RenderPipeline\ParticleRenderSystem.h" />
     <ClInclude Include="Engine\Mono\Systems\MonoSyncEgSystem.h" />
     <ClInclude Include="Engine\Mono\Systems\MonoHotReloadSystem.h" />
+    <ClInclude Include="Engine\Mono\Ecs\SyMonoEcsSyncSceneObject.h" />
+    <ClInclude Include="Engine\Mono\Ecs\SyMonoEcsSyncCollider.h" />
+    <ClInclude Include="Engine\Mono\Ecs\SyMonoEcsSyncLight.h" />
+    <ClInclude Include="Engine\Mono\Ecs\SyMonoEcsSyncParticles.h" />
+    <ClInclude Include="Engine\Mono\Ecs\SyMonoEcsSyncRigid.h" />
+    <ClInclude Include="Engine\Mono\Ecs\SyMonoEcsSyncSkybox.h" />
+    <ClInclude Include="Engine\Mono\Ecs\SyMonoEcsSyncSound.h" />
     <ClInclude Include="vendor\Delegates.h" />
     <ClInclude Include="vendor\entt\core\algorithm.hpp" />
     <ClInclude Include="vendor\entt\core\any.hpp" />
