Mono. Editor Attributes

--- a/MonoLayer/MonoLayer.csproj
+++ b/MonoLayer/MonoLayer.csproj
@@ -86,20 +86,23 @@
         <Compile Include="Core\SyEcsSync.cs" />
         <Compile Include="Core\SyEcsSystemBase.cs" />
         <Compile Include="Core\SyProxyEcs.cs" />
-        <Compile Include="Editor\Drawers\EditorDrawerCompParticles.cs" />
+        <Compile Include="Editor\Attributes\EditorFieldBaseAttribute.cs" />
+        <Compile Include="Editor\Attributes\FloatRangeAttribute.cs" />
+        <Compile Include="Editor\Attributes\FoldoutAttribute.cs" />
+        <Compile Include="Editor\Attributes\HideAttribute.cs" />
+        <Compile Include="Editor\Attributes\ShowIfBaseAttribute.cs" />
+        <Compile Include="Editor\Attributes\ShowIfBoolAttribute.cs" />
+        <Compile Include="Editor\Attributes\ShowIfEnumAttribute.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerCurve.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerList.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerBase.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerBool.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerColor.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerComp.cs" />
-        <Compile Include="Editor\Drawers\EditorDrawerCompLight.cs" />
-        <Compile Include="Editor\Drawers\EditorDrawerParticlesBurst.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerReflect.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerEnum.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerFloat.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerInt.cs" />
-        <Compile Include="Editor\Drawers\EditorDrawerCompTransform.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerResRef.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerVector2.cs" />
         <Compile Include="Editor\Drawers\EditorDrawerVector3.cs" />
