--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -115,9 +115,7 @@
     <ClCompile Include="Engine\Features\Events\Systems\PrepareEventsSystem.cpp" />
     <ClCompile Include="Engine\Mono\SyMono.cpp" />
     <ClCompile Include="Engine\Mono\Objects\SyMonoGame.cpp" />
-    <ClCompile Include="Engine\Mono\SyMonoObj.cpp" />
     <ClCompile Include="Engine\Mono\SyMonoRuntime.cpp" />
-    <ClCompile Include="Engine\Mono\SyMonoProxyDatas.h" />
     <ClCompile Include="Engine\Mono\Systems\MonoGameLoopSystem.cpp" />
     <ClCompile Include="Engine\Mono\Objects\SyMonoLogger.cpp" />
     <ClCompile Include="Engine\Mono\Objects\SyMonoEcs.cpp" />
@@ -146,6 +144,7 @@
     <ClCompile Include="Engine\Mono\Ecs\SyMonoEcsSyncSkybox.cpp" />
     <ClCompile Include="Engine\Mono\Ecs\SyMonoEcsSyncParticles.cpp" />
     <ClCompile Include="Engine\Mono\Ecs\SyMonoEcsSyncSound.cpp" />
+    <ClCompile Include="Engine\Features\Physics\Systems\JointSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Downloads\stb_image.h" />
@@ -158,7 +157,6 @@
     <ClInclude Include="Engine\Core\ResourcePath.h" />
     <ClInclude Include="Engine\Events\SyHotReloadEvent.h" />
     <ClInclude Include="Engine\Events\SyImageBasedLightingUpdateEvent.h" />
-    <ClInclude Include="Engine\Features\Physics\Events\SyOnCreateColliderEvent.h" />
     <ClInclude Include="Engine\Features\Physics\Events\SyOnCreateRBodyEvent.h" />
     <ClInclude Include="Engine\Events\SyPlayModeEndedEvent.h" />
     <ClInclude Include="Engine\Events\SyPlayModeStartedEvent.h" />
@@ -365,10 +363,8 @@
     <ClInclude Include="Engine\Core\Tools\MathHelper.h" />
     <ClInclude Include="Engine\Mono\SyMono.h" />
     <ClInclude Include="Engine\Mono\Objects\SyMonoGame.h" />
-    <ClInclude Include="Engine\Mono\SyMonoObj.h" />
     <ClInclude Include="Engine\Mono\SyMonoRuntime.h" />
     <ClInclude Include="Engine\Mono\Systems\MonoGameLoopSystem.h" />
-    <ClInclude Include="Engine\Mono\SyMonoMethod.h" />
     <ClInclude Include="Matrix4x4.h" />
     <ClInclude Include="Engine\Mono\Objects\SyMonoLogger.h" />
     <ClInclude Include="Engine\Mono\Objects\SyMonoEcs.h" />
@@ -387,7 +383,7 @@
     <ClInclude Include="Engine\Features\Rendering\RenderPipeline\ParticleRenderSystem.h" />
     <ClInclude Include="vendor\ImGui\curve_v122.hpp" />
     <ClInclude Include="vendor\ImGui\ImCurve.h" />
-      <ClInclude Include="Engine\Mono\Systems\MonoSyncEgSystem.h" />
+    <ClInclude Include="Engine\Mono\Systems\MonoSyncEgSystem.h" />
     <ClInclude Include="Engine\Events\SyHotReloadEvent.h" />
     <ClInclude Include="Engine\Events\SyImageBasedLightingUpdateEvent.h" />
     <ClInclude Include="Engine\Features\Physics\Events\SyOnCreateRBodyEvent.h" />
@@ -424,14 +420,13 @@
     <ClInclude Include="Engine\Mono\Ecs\SyMonoEcsSyncSound.h" />
     <ClInclude Include="Engine\Mono\Ecs\ISyMonoEcsSync.h" />
     <ClInclude Include="Engine\Core\Tools\Macro.h" />
-    <ClInclude Include="Engine\Features\Common\EComponentTypes.h" />
-    <ClInclude Include="Engine\Features\Common\Events\OnAddComponentEvent.h" />
-    <ClInclude Include="Engine\Features\Common\Events\OnRemoveComponentEvent.h" />
+    <ClInclude Include="Engine\Features\Common\ECompId.h" />
+    <ClInclude Include="Engine\Features\Common\Events\CompAddedEv.h" />
+    <ClInclude Include="Engine\Features\Common\Events\CompRemovedEv.h" />
     <ClInclude Include="Engine\Features\Physics\Components\JointComponent.h" />
-    <ClInclude Include="Engine\Features\Physics\Events\SyOnCreateJoint.h" />
     <ClInclude Include="Engine\Features\Physics\Systems\JointSystem.h" />
     <ClInclude Include="Engine\Features\Physics\Events\SyOnCreateCollider.h" />
-    <ClInclude Include="Engine\Features\Physics\Systems\RBodySimulationSystem.h" />
+    <ClInclude Include="Engine\Contexts\PhysicsContext.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\..\..\Downloads\skybox.jpg" />
