--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -670,6 +670,7 @@
     <ClCompile Include="Engine\Mono\Ecs\SyMonoEcsSyncSound.cpp" />
     <ClCompile Include="Engine\Mono\Ecs\SyMonoEcsSyncFixedJoint.cpp" />
     <ClCompile Include="Engine\Mono\Ecs\SyMonoEcsSyncHingeJoint.cpp" />
+    <ClCompile Include="Engine\Mono\Ecs\SyMonoEcsSyncCamera.cpp" />
     <ClCompile Include="vendor\Delegates.cpp" />
     <ClCompile Include="vendor\ImGuizmo\GraphEditor.cpp" />
     <ClCompile Include="vendor\ImGuizmo\ImCurveEdit.cpp" />
@@ -832,6 +833,7 @@
     <ClInclude Include="Engine\Mono\Ecs\SyMonoEcsSyncSound.h" />
     <ClInclude Include="Engine\Mono\Ecs\SyMonoEcsSyncFixedJoint.h" />
     <ClInclude Include="Engine\Mono\Ecs\SyMonoEcsSyncHingeJoint.h" />
+    <ClInclude Include="Engine\Mono\Ecs\SyMonoEcsSyncCamera.h" />
     <ClInclude Include="vendor\Delegates.h" />
     <ClInclude Include="vendor\entt\core\algorithm.hpp" />
     <ClInclude Include="vendor\entt\core\any.hpp" />
