--- a/MonoLayer/MonoLayer.csproj
+++ b/MonoLayer/MonoLayer.csproj
@@ -41,6 +41,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Datas\SySceneEnt.cs" />
+        <Compile Include="Ecs\Comps\CameraComp.cs" />
         <Compile Include="Ecs\Comps\ColliderComp.cs" />
         <Compile Include="Ecs\Comps\FixedJointComp.cs" />
         <Compile Include="Ecs\Comps\HingeJointComp.cs" />
@@ -57,7 +58,7 @@
         <Compile Include="Ecs\Comps\TransformComp.cs" />
         <Compile Include="Ecs\SyEcs.cs" />
         <Compile Include="Ecs\SyEcsSystemBase.cs" />
-        <Compile Include="Ecs\Sync\ISyEcsSync.cs" />
+        <Compile Include="Ecs\Sync\SyEcsSyncCamera.cs" />
         <Compile Include="Ecs\Sync\SyEcsSyncer.cs" />
         <Compile Include="Ecs\Sync\SyEcsSyncBase.cs" />
         <Compile Include="Ecs\Sync\SyEcsSyncCollider.cs" />
