--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -674,6 +674,7 @@
     <ClCompile Include="Engine\Mono\Ecs\SyMonoEcsSyncCamera.cpp" />
     <ClCompile Include="Engine\Features\Animations\Systems\SkeletalAnimationSystem.cpp" />
     <ClCompile Include="Engine\Mono\Ecs\SyMonoEcsSyncAnimator.cpp" />
+    <ClCompile Include="Engine\Mono\Objects\SyMonoInput.cpp" />
     <ClCompile Include="vendor\Delegates.cpp" />
     <ClCompile Include="vendor\ImGuizmo\GraphEditor.cpp" />
     <ClCompile Include="vendor\ImGuizmo\ImCurveEdit.cpp" />
@@ -856,6 +857,7 @@
     <ClInclude Include="Engine\Mono\Ecs\SyMonoEcsSyncCamera.h" />
     <ClInclude Include="Engine\Features\Animations\Systems\SkeletalAnimationSystem.h" />
     <ClInclude Include="Engine\Mono\Ecs\SyMonoEcsSyncAnimator.h" />
+    <ClInclude Include="Engine\Mono\Objects\SyMonoInput.h" />
     <ClInclude Include="vendor\Delegates.h" />
     <ClInclude Include="vendor\entt\core\algorithm.hpp" />
     <ClInclude Include="vendor\entt\core\any.hpp" />
