--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -671,6 +671,24 @@
     <ClCompile Include="vendor\ImGui\imgui_impl_win32.cpp" />
     <ClCompile Include="vendor\ImGui\imgui_tables.cpp" />
     <ClCompile Include="vendor\ImGui\imgui_widgets.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Detour\Source\DetourAlloc.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Detour\Source\DetourAssert.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Detour\Source\DetourCommon.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Detour\Source\DetourNavMesh.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Detour\Source\DetourNavMeshBuilder.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Detour\Source\DetourNavMeshQuery.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Detour\Source\DetourNode.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Recast\Source\Recast.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Recast\Source\RecastAlloc.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Recast\Source\RecastArea.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Recast\Source\RecastAssert.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Recast\Source\RecastContour.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Recast\Source\RecastFilter.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Recast\Source\RecastLayers.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Recast\Source\RecastMesh.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Recast\Source\RecastMeshDetail.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Recast\Source\RecastRasterization.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Recast\Source\RecastRegion.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Downloads\stb_image.h" />
@@ -884,6 +902,20 @@
     <ClInclude Include="vendor\ImGui\imstb_truetype.h" />
     <ClInclude Include="vendor\DirectXTK\Inc\SimpleMath.h" />
     <ClInclude Include="vendor\nlohmann_json\json.hpp" />
+    <ClInclude Include="vendor\recastnavigation\Detour\Include\DetourAlloc.h" />
+    <ClInclude Include="vendor\recastnavigation\Detour\Include\DetourAssert.h" />
+    <ClInclude Include="vendor\recastnavigation\Detour\Include\DetourCommon.h" />
+    <ClInclude Include="vendor\recastnavigation\Detour\Include\DetourConfig.h" />
+    <ClInclude Include="vendor\recastnavigation\Detour\Include\DetourMath.h" />
+    <ClInclude Include="vendor\recastnavigation\Detour\Include\DetourNavMesh.h" />
+    <ClInclude Include="vendor\recastnavigation\Detour\Include\DetourNavMeshBuilder.h" />
+    <ClInclude Include="vendor\recastnavigation\Detour\Include\DetourNavMeshQuery.h" />
+    <ClInclude Include="vendor\recastnavigation\Detour\Include\DetourNode.h" />
+    <ClInclude Include="vendor\recastnavigation\Detour\Include\DetourStatus.h" />
+    <ClInclude Include="vendor\recastnavigation\Recast\Include\Recast.h" />
+    <ClInclude Include="vendor\recastnavigation\Recast\Include\RecastAlloc.h" />
+    <ClInclude Include="vendor\recastnavigation\Recast\Include\RecastAssert.h" />
+    <ClInclude Include="vendor\recastnavigation\Recast\Include\RecastConfig.h" />
     <ClInclude Include="vendor\stb_image.h" />
     <ClInclude Include="vendor\WICTextureLoader.h" />
   </ItemGroup>
