--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -103,6 +103,25 @@
     <ClCompile Include="vendor\ImGui\imgui_widgets.cpp" />
     <ClCompile Include="Engine\Features\Sounds\Systems\SoundSystem.cpp" />
     <ClCompile Include="Engine\Features\Physics\Systems\JointSystem.cpp" />
+    <ClCompile Include="Engine\Features\AI\Systems\NavMeshSystem.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Recast\Source\Recast.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Recast\Source\RecastAlloc.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Recast\Source\RecastArea.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Recast\Source\RecastAssert.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Recast\Source\RecastContour.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Recast\Source\RecastFilter.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Recast\Source\RecastLayers.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Recast\Source\RecastMesh.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Recast\Source\RecastMeshDetail.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Recast\Source\RecastRasterization.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Recast\Source\RecastRegion.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Detour\Source\DetourAlloc.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Detour\Source\DetourAssert.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Detour\Source\DetourCommon.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Detour\Source\DetourNavMesh.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Detour\Source\DetourNavMeshBuilder.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Detour\Source\DetourNavMeshQuery.cpp" />
+    <ClCompile Include="vendor\recastnavigation\Detour\Source\DetourNode.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\Downloads\stb_image.h" />
@@ -377,6 +396,21 @@
     <ClInclude Include="vendor\FMod\api\core\inc\fmod_dsp_effects.h" />
     <ClInclude Include="vendor\FMod\api\core\inc\fmod_errors.h" />
     <ClInclude Include="vendor\FMod\api\core\inc\fmod_output.h" />
+    <ClInclude Include="Engine\Features\AI\Systems\NavMeshSystem.h" />
+    <ClInclude Include="vendor\recastnavigation\Recast\Include\Recast.h" />
+    <ClInclude Include="vendor\recastnavigation\Recast\Include\RecastAlloc.h" />
+    <ClInclude Include="vendor\recastnavigation\Recast\Include\RecastAssert.h" />
+    <ClInclude Include="vendor\recastnavigation\Recast\Include\RecastConfig.h" />
+    <ClInclude Include="vendor\recastnavigation\Detour\Include\DetourAlloc.h" />
+    <ClInclude Include="vendor\recastnavigation\Detour\Include\DetourAssert.h" />
+    <ClInclude Include="vendor\recastnavigation\Detour\Include\DetourCommon.h" />
+    <ClInclude Include="vendor\recastnavigation\Detour\Include\DetourConfig.h" />
+    <ClInclude Include="vendor\recastnavigation\Detour\Include\DetourMath.h" />
+    <ClInclude Include="vendor\recastnavigation\Detour\Include\DetourNavMesh.h" />
+    <ClInclude Include="vendor\recastnavigation\Detour\Include\DetourNavMeshBuilder.h" />
+    <ClInclude Include="vendor\recastnavigation\Detour\Include\DetourNavMeshQuery.h" />
+    <ClInclude Include="vendor\recastnavigation\Detour\Include\DetourNode.h" />
+    <ClInclude Include="vendor\recastnavigation\Detour\Include\DetourStatus.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\..\..\Downloads\skybox.jpg" />
