--- a/TestGame/TestGame.csproj
+++ b/TestGame/TestGame.csproj
@@ -43,9 +43,10 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="ELogTag.cs" />
+        <Compile Include="Features\Player\Comps\PlayerData.cs" />
+        <Compile Include="Features\Player\Systems\PlayerMoveSystem.cs" />
         <Compile Include="Properties\AssemblyInfo.cs"/>
         <Compile Include="SySetup.cs" />
-        <Compile Include="TestSystem.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
